# slackle

./: .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: labeler.yml  release-drafter.yml
.github/workflows/: ci.yml  label.yml  labeler.yml  publish.yml  release.yml  stale.yml  test_slackle.yml
examples/: advanced_usage.py  getting_started.py  main.py
src/slackle/: __init__.py  config.py  constants.py  exc.py
src/slackle/core/: __init__.py  app.py  command.py  dispatcher.py  formatter.py  plugin.py
src/slackle/core/slack/: __init__.py  callback.py  client.py  handler.py  interface.py
src/slackle/dependencies/: __init__.py  builtins.py
src/slackle/plugins/command/: __init__.py  command.py  dependencies.py  setup.py  types.py
src/slackle/plugins/formatter/: __init__.py  formatter.py  setup.py  types.py
src/slackle/types/: base.py  data.py  event.py  response.py
src/slackle/utils/: slack.py
tests/test_app/: test_app.py
