[project]
name = "slackle"
version = "0.1.0"
description = "A lightweight Slack bot framework for building modular and maintainable Slack bots."
authors = [
    { name="Hosung Lee", email="hlee24@snu.ac.kr" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/hlee-ai/slackle"
Repository = "https://github.com/hlee-ai/slackle"

[tool.setuptools]
packages = ["slackle"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
