[project]
name = "slackle"
version = "0.1.0"
description = "A lightweight Slack bot framework for building modular and maintainable Slack bots."
dependencies = [
    "fastapi>=0.103.1",
    "pydantic>=1.10.7",
    "httpx>=0.24.0",
    "aiohttp>=3.8.5",
    "async_timeout>=4.0.2",
    "typing-extensions>=4.5.0"
]
authors = [
    { name="Hosung Lee", email="hlee24@snu.ac.kr" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/hlee-ai/slackle"
Repository = "https://github.com/hlee-ai/slackle"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 100